dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vpordb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpordb
  template:
    metadata:
      labels:
        app: vpordb
    spec:
      containers:
      - name: vpordb
        image: vprocontainers/vprofiledb
        volumeMounts:
        - name: vpro-db-data
          mountPath: /var/lib/mysql # This is the path where the MySQL data will be stored. before that we need to delete "lost+found" directory for that we are using initContainers
        ports:
        - name: vprodb-port
          containerPort: 3306
      volumues:
       - name: vpro-db-data
         persistentVolumeClaim:
           claimName: db-pv-claim  
           
      initContainers: # InitContainers are used to perform operations before the main container starts (vpordb)
      - name: busybox
        image: busybox:latest
        command: ['sh', '-c', 'rm -rf /var/lib/mysql/lost+found']
        volumeMounts:
        - name: vpro-db-data
          mountPath: /var/lib/mysql
