dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpordb
spec:
  selector:
    app: vpordb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: vprodb-port
      type: ClusterIP
