mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromc
spec:
  selector:
    app: vpromc
  ports:
    - protocol: TCP
      port: 11211
      targetPort: vpromc-port
      type: ClusterIP
